@@ -462,9 +462,12 @@ block|}
 name|ClassLoader
 name|cl
 init|=
-name|ClassLoader
+name|this
 operator|.
-name|getSystemClassLoader
+name|getClass
+argument_list|()
+operator|.
+name|getClassLoader
 argument_list|()
 decl_stmt|;
 name|Thread
@@ -841,9 +844,12 @@ index|[]
 block|{}
 argument_list|)
 argument_list|,
-name|ClassLoader
+name|this
 operator|.
-name|getSystemClassLoader
+name|getClass
+argument_list|()
+operator|.
+name|getClassLoader
 argument_list|()
 argument_list|)
 decl_stmt|;
