@@ -52,6 +52,8 @@ Release 0.91.0 - Unreleased
    HBASE-3550  FilterList reports false positives (Bill Graham via Andrew
                Purtell)
    HBASE-3566  writeToWAL is not serialized for increment operation
+   HBASE-3552  Coprocessors are unable to load if RegionServer is launched
+               using a different classloader than system default
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
